tests/parser/block-statement-not-terminated.stderr
error: '{' was never closed
 --> $DIR/block-statement-not-terminated.lox:1:1
  |
1 | { foo;
  | ^
